--- a/.github/workflows/deploy_frontend.yml
+++ b/.github/workflows/deploy_frontend.yml
@@ -18,7 +18,7 @@ jobs:
       SSH_USER: ${{ secrets.SSH_USER }}
       DEPLOY_DIRECTORY: ${{ vars.DEPLOY_DIRECTORY }}
       CONTAINER_NAME: ${{ vars.FRONT }}_${{ vars.NGINX }}_${{ vars.ENV }}
-      CONTAINER_BACKEND_NAME: ${{ vars.BACK }}_${{ vars.NODE }}_${{ vars.ENV }}
+      CONTAINER_BACKEND_NAME: back_node_${{ vars.ENV }}
       NETWORK: ${{ vars.NET }}_${{ vars.ENV }}
       FRONTEND_PORT: ${{ vars.FRONTEND_PORT }}
       CONTAINER_PORT: ${{ vars.CONTAINER_PORT }}
@@ -259,7 +259,8 @@ jobs:
       - name: 14 - Restart Backend After Frontend Deployment
         run: |
           ssh -p $SSH_PORT -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no -i /tmp/git_id_rsa $SSH_USER@$SERVER_IP << 'EOF'
-                  
+             
+          
             echo "🔄 Vérification et redémarrage du backend pour l'environnement : $ENVIRONMENT"
             echo "🧐 Vérification du conteneur backend : $CONTAINER_BACKEND_NAME"
             echo "🖥 Liste des conteneurs existants :"
