modification du chemin relatif pour les images

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,7 @@
       "@pages/*": ["components/pages/*"],
       "@images/*": ["assets/images/*"],
       "@menus/*": ["components/partiels/Menu/*"],
+      "logos/*": ["assets/images/logos/*"],
     }
   },
   "include": ["src"],
