--- a/.github/workflows/deploy_frontend.yml
+++ b/.github/workflows/deploy_frontend.yml
@@ -295,6 +295,24 @@ jobs:
             fi
             echo "[SUCCESS] ✅ Le conteneur backend est actif."
 
+            echo "[INFO] ⏳ Attente de l'ouverture du port $BACKEND_PORT..."
+            PORT_OK=0
+            for i in {1..30}; do
+              if docker exec "$CONTAINER_BACKEND_NAME" netstat -tln | grep -q ":$BACKEND_PORT"; then
+                echo "[SUCCESS] ✅ Port $BACKEND_PORT est maintenant ouvert."
+                PORT_OK=1
+                break
+              else
+                echo "[WAITING] Tentative $i/30... Port pas encore ouvert"
+                sleep 1
+              fi
+            done
+
+            if [ "$PORT_OK" -eq 0 ]; then
+              echo "[ERROR] ❌ Port $BACKEND_PORT non disponible après 30 secondes." >&2
+              exit 1
+            fi
+
             echo "[INFO] 🌐 Vérification de l'endpoint /health..."
             if docker exec "$CONTAINER_BACKEND_NAME" curl -s -o /dev/null -w "%{http_code}" http://localhost:$BACKEND_PORT/health | grep -q "200"; then
               echo "[SUCCESS] ✅ Endpoint /health répond correctement."
