--- a/.github/workflows/deploy_frontend.yml
+++ b/.github/workflows/deploy_frontend.yml
@@ -287,46 +287,27 @@ jobs:
             CONTAINER_BACKEND_NAME="back_node_${{ vars.ENV }}"
             BACKEND_PORT=7001
 
-            echo "[INFO - 14.1] 🔍 Vérification de l'état du conteneur backend ($CONTAINER_BACKEND_NAME)..."
-            if ! docker ps --filter "name=$CONTAINER_BACKEND_NAME" --filter "status=running" | grep -w "$CONTAINER_BACKEND_NAME"; then
-              echo "[ERROR] ❌ Le conteneur backend n'est pas actif après redémarrage."
-              docker logs "$CONTAINER_BACKEND_NAME" | tail -n 40
-              exit 1
-            fi
-            echo "[SUCCESS - 14.1] ✅ Le conteneur backend est actif."
+            echo "[INFO - 14.1] 🔍 Vérification de l'état du conteneur backend (\$CONTAINER_BACKEND_NAME)..."
+            docker ps --filter "name=\$CONTAINER_BACKEND_NAME"
 
-            echo "[INFO] ⏳ Attente de l'ouverture du port $BACKEND_PORT..."
+            echo "[INFO] ⏳ Attente de la disponibilité de l'endpoint /health..."
+
             PORT_OK=0
-            for i in {1..300}; do
-              if docker exec "$CONTAINER_BACKEND_NAME" netstat -tln | grep -q ":$BACKEND_PORT"; then
-                echo "[SUCCESS] ✅ Port $BACKEND_PORT est maintenant ouvert."
+            for i in {1..60}; do
+              STATUS_CODE=\$(docker exec "\$CONTAINER_BACKEND_NAME" curl -s -o /dev/null -w "%{http_code}" http://localhost:\$BACKEND_PORT/health)
+
+              if [ "\$STATUS_CODE" = "200" ]; then
+                echo "[SUCCESS] ✅ L'endpoint /health répond avec le code 200 (OK)"
                 PORT_OK=1
                 break
               else
-                echo "[WAITING] Tentative $i/300... Port pas encore ouvert"
-                sleep 1
+                echo "[WAITING] Tentative \$i/60... /health renvoie : \$STATUS_CODE"
+                sleep 2
               fi
             done
 
-            if [ "$PORT_OK" -eq 0 ]; then
-              echo "[ERROR] ❌ Port $BACKEND_PORT non disponible après 300 secondes." >&2
+            if [ "\$PORT_OK" -eq 0 ]; then
+              echo "[ERROR] ❌ L'endpoint /health n’est pas disponible après 60 tentatives." >&2
               exit 1
-            fi
-
-            echo "[INFO] 🌐 Vérification de l'endpoint /health..."
-            if docker exec "$CONTAINER_BACKEND_NAME" curl -s -o /dev/null -w "%{http_code}" http://localhost:$BACKEND_PORT/health | grep -q "200"; then
-              echo "[SUCCESS] ✅ Endpoint /health répond correctement."
-            else
-              echo "[ERROR] ❌ Endpoint /health inaccessible." >&2
-              docker exec "$CONTAINER_BACKEND_NAME" curl -i http://localhost:$BACKEND_PORT/health || true
-              exit 1
-            fi
-
-            echo "[INFO] 🔐 Vérification de /api/me (non authentifié)..."
-            RESPONSE=$(docker exec "$CONTAINER_BACKEND_NAME" curl -s -X GET http://localhost:$BACKEND_PORT/api/me)
-            if echo "$RESPONSE" | grep -qi "unauthorized\|jwt\|token"; then
-              echo "[SUCCESS] ✅ La route /api/me est bien protégée (réponse attendue sans token)."
-            else
-              echo "[WARNING] ⚠️ Réponse inattendue de /api/me : $RESPONSE"
             fi
           EOF
