ajustement validation script deploy

--- a/.github/workflows/deploy_frontend.yml
+++ b/.github/workflows/deploy_frontend.yml
@@ -261,28 +261,38 @@ jobs:
           ssh -p $SSH_PORT -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no -i /tmp/git_id_rsa $SSH_USER@$SERVER_IP << 'EOF'
             CONTAINER_BACKEND_NAME="back_node_${{ vars.ENV }}"
             BACKEND_PORT=7001
-
-            echo "[INFO - 14] 🔄 Redémarrage du conteneur backend : \$CONTAINER_BACKEND_NAME"
+      
+            echo "[INFO - 14] 🔄 Redémarrage du backend : \$CONTAINER_BACKEND_NAME"
             if docker ps -a --format '{{.Names}}' | grep -w "\$CONTAINER_BACKEND_NAME"; then
               docker restart "\$CONTAINER_BACKEND_NAME"
-              echo "[SUCCESS] ✅ Conteneur backend redémarré."
-
-              echo "[INFO] ⏳ Attente de la disponibilité de l'endpoint /health..."
-              for i in {1..60}; do
-                STATUS_CODE=\$(docker exec "\$CONTAINER_BACKEND_NAME" curl -s -o /dev/null -w "%{http_code}" http://localhost:\$BACKEND_PORT/health || true)
-                if [ "\$STATUS_CODE" = "200" ]; then
-                  echo "[SUCCESS] ✅ Endpoint /health est disponible (HTTP 200) après \$i secondes."
-                  exit 0
-                fi
-                echo "[WAITING] Tentative \$i/60... (status actuel: \$STATUS_CODE)"
-                sleep 1
-              done
-
-              echo "[ERROR] ❌ Le backend n'a pas répondu correctement à /health après 60 secondes."
-              docker logs "\$CONTAINER_BACKEND_NAME" | tail -n 40
-              exit 1
+              echo "[SUCCESS - 14] ✅ Backend redémarré avec succès."
             else
-              echo "[ERROR] ❌ Conteneur \$CONTAINER_BACKEND_NAME introuvable."
+              echo "[ERROR - 14] ❌ Conteneur non trouvé : \$CONTAINER_BACKEND_NAME"
               exit 1
             fi
+      
+            echo "[INFO - 14.1] ⏳ Attente que le port \$BACKEND_PORT soit ouvert..."
+      
+            for i in {1..60}; do
+              if docker exec "\$CONTAINER_BACKEND_NAME" netstat -tln | grep -q ":\$BACKEND_PORT"; then
+                echo "[SUCCESS - 14.1] ✅ Port \$BACKEND_PORT est ouvert"
+                break
+              else
+                echo "[WAITING] Tentative \$i/60... Port pas encore ouvert"
+                sleep 1
+              fi
+            done
+      
+            # Vérification bloquante de /health
+            echo "[INFO - 14.2] 🔍 Vérification de l'endpoint /health..."
+            for i in {1..10}; do
+              STATUS_CODE=\$(docker exec "\$CONTAINER_BACKEND_NAME" curl -s -o /dev/null -w "%{http_code}" http://localhost:\$BACKEND_PORT/health)
+              if [ "\$STATUS_CODE" = "200" ]; then
+                echo "[SUCCESS - 14.2] ✅ /health est prêt (HTTP 200)"
+                break
+              else
+                echo "[WAITING] Tentative \$i/10... HTTP \$STATUS_CODE"
+                sleep 2
+              fi
+            done
           EOF
