ajustement validation script deploy

--- a/.github/workflows/deploy_frontend.yml
+++ b/.github/workflows/deploy_frontend.yml
@@ -263,7 +263,7 @@ jobs:
       
           echo "🔁 Connexion SSH pour redémarrage du backend et healthcheck..."
       
-          ssh -p $SSH_PORT -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no -i /tmp/git_id_rsa $SSH_USER@$SERVER_IP bash << EOF
+          ssh -p $SSH_PORT -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no -i /tmp/git_id_rsa $SSH_USER@$SERVER_IP bash <<EOF
             set -e
       
             echo "[INFO - 14] 🔄 Redémarrage du backend : $CONTAINER_BACKEND_NAME"
@@ -285,11 +285,14 @@ jobs:
               done
       
               echo "[INFO - 14] 🌐 Vérification de /health..."
+      
+              HEALTH_OK=0
               for i in {1..10}; do
                 STATUS_CODE=\$(docker exec "$CONTAINER_BACKEND_NAME" curl -s -o /dev/null -w "%{http_code}" http://localhost:$BACKEND_PORT/health)
       
                 if [ "\$STATUS_CODE" = "200" ]; then
-                  echo "[SUCCESS] ✅ /health répond 200"
+                  echo "[SUCCESS] ✅ /health répond 200 (tentative \$i)"
+                  HEALTH_OK=1
                   break
                 else
                   echo "[WAITING] Tentative \$i : /health répond \$STATUS_CODE"
@@ -297,9 +300,15 @@ jobs:
                 fi
               done
       
+              if [ "\$HEALTH_OK" -eq 0 ]; then
+                echo "[ERROR] ❌ /health n’a pas répondu 200 après 10 tentatives."
+                exit 7
+              fi
+      
               echo "[SUCCESS] 🚀 Backend prêt après redémarrage."
             else
               echo "[ERROR - 14] ❌ Conteneur non trouvé : $CONTAINER_BACKEND_NAME"
               exit 1
             fi
           EOF
+        
