ajout de fichiers tests et remplacement dans le script

--- a/.github/workflows/deploy_frontend.yml
+++ b/.github/workflows/deploy_frontend.yml
@@ -256,12 +256,12 @@ jobs:
                 logrotate -d "\$LOGROTATE_CONF"
           EOF
 
-      - name: 14 - Redémarrer le Backend après le déploiement du Frontend
+      - name: 14 - Redémarrer le backend après le déploiement du Frontend
         run: |
           CONTAINER_BACKEND_NAME="back_node_${{ env.ENV }}"
           BACKEND_PORT=${{ env.BACKEND_PORT }}
       
-          echo "🔁 Connexion SSH pour redémarrage du backend et healthcheck..."
+          echo "🔁 Connexion SSH pour redémarrage du backend et vérification post-déploiement..."
       
           ssh -p $SSH_PORT -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no -i /tmp/git_id_rsa $SSH_USER@$SERVER_IP bash <<'EOF'
             set -e
@@ -288,45 +288,17 @@ jobs:
                 fi
               done
       
-              echo "[SUCCESS] 🚀 Backend prêt après redémarrage."
-              echo "[INFO - 14] 📦 État du conteneur backend après redémarrage :"
-              docker ps -a --filter "name=\$CONTAINER_BACKEND_NAME"
-              docker ps -a --filter "name=\$CONTAINER_POSTGRES_NAME"
-      
-              echo "[INFO - 14] 🧪 Exécution des tests automatisés dans le conteneur..."
-      
-              TEST_SCRIPTS=("testHealth.js" "testRegister.js" "testLogin.js")
-              COUNT=1
-              TOTAL=\${#TEST_SCRIPTS[@]}
-              FAILURES=0
-      
-              for SCRIPT in "\${TEST_SCRIPTS[@]}"; do
-                echo ""
-                echo "🔍 Test \$COUNT/\$TOTAL : \$SCRIPT"
-                if docker exec "\$CONTAINER_BACKEND_NAME" test -f "/app/tests/\$SCRIPT"; then
-                  if docker exec "\$CONTAINER_BACKEND_NAME" node "/app/tests/\$SCRIPT"; then
-                    echo "[SUCCESS] ✅ \$SCRIPT a réussi"
-                  else
-                    echo "[WARNING] ⚠️ \$SCRIPT a échoué ou retourné une erreur"
-                    FAILURES=\$((FAILURES + 1))
-                  fi
-                else
-                  echo "[SKIP] ⏩ \$SCRIPT introuvable, test ignoré"
-                fi
-                COUNT=\$((COUNT + 1))
-              done
-      
-              echo ""
-              echo "[INFO - 14] 🔚 Résumé des tests exécutés :"
-              if [ "\$FAILURES" -eq 0 ]; then
-                echo "[SUMMARY] ✅ Tous les tests ont passé avec succès."
+              echo "[INFO - 14] 🧪 Exécution du testComplet.js..."
+              if docker exec "\$CONTAINER_BACKEND_NAME" node /app/tests/testComplet.js; then
+                echo "[SUCCESS - 14] ✅ Tous les tests post-déploiement ont réussi 🎉"
               else
-                echo "[SUMMARY] ⚠️ \$FAILURES test(s) ont échoué."
+                echo "[ERROR - 14] ❌ Le testComplet.js a échoué !" >&2
+                exit 1
               fi
       
             else
               echo "[ERROR - 14] ❌ Conteneur non trouvé : \$CONTAINER_BACKEND_NAME"
               exit 1
-            fi        
+            fi
           EOF
         
