--- a/.github/workflows/deploy_frontend.yml
+++ b/.github/workflows/deploy_frontend.yml
@@ -261,49 +261,54 @@ jobs:
           CONTAINER_BACKEND_NAME="back_node_${{ env.ENV }}"
           CONTAINER_POSTGRES_NAME="postgres_${{ env.ENV }}"
           BACKEND_PORT=${{ env.BACKEND_PORT }}
-      
+
           echo "🔁 Connexion SSH pour redémarrage du backend et vérification post-déploiement..."
-      
+
           ssh -p $SSH_PORT -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no -i /tmp/git_id_rsa $SSH_USER@$SERVER_IP bash <<EOF
             set -e
-      
+
             CONTAINER_BACKEND_NAME="${CONTAINER_BACKEND_NAME}"
             CONTAINER_POSTGRES_NAME="${CONTAINER_POSTGRES_NAME}"
             BACKEND_PORT="${BACKEND_PORT}"
 
             echo "[INFO - 14] 🔄 Redémarrage du backend : \$CONTAINER_BACKEND_NAME"
-      
+
             if docker ps -a --format '{{.Names}}' | grep -w "\$CONTAINER_BACKEND_NAME"; then
               docker restart "\$CONTAINER_BACKEND_NAME"
               echo "[SUCCESS - 14] ✅ Conteneur redémarré : \$CONTAINER_BACKEND_NAME"
-      
-              echo "[INFO - 14] ⏳ Attente de l'ouverture du port \$BACKEND_PORT..."
 
+              echo "[INFO - 14] 🚀 Démarrage manuel du backend avec npm start..."
+              docker exec -d "\$CONTAINER_BACKEND_NAME" npm start
+
+              echo "[INFO - 14] ⏳ Attente de l'ouverture du port \$BACKEND_PORT..."
               for i in \$(seq 1 60); do
                 if docker exec "\$CONTAINER_BACKEND_NAME" netstat -tln | grep -q ":\$BACKEND_PORT"; then
                   echo "[SUCCESS] ✅ Port \$BACKEND_PORT détecté (tentative \$i)"
                   break
                 else
                   echo "[WAITING] Tentative \$i/60... Port non disponible"
-                  sleep 10
+                  sleep 2
                 fi
               done
 
               echo "[INFO - 14] 💤 Pause de stabilisation après détection du port..."
-              sleep 30  # ←⏱ ici on augmente le délai pour que le backend soit vraiment prêt
+              sleep 30
 
               echo "[INFO - 14] 🧪 Exécution de testComplet.js..."
               if docker exec "\$CONTAINER_BACKEND_NAME" node /app/tests/testComplet.js; then
                 echo "[SUCCESS - 14] ✅ Tous les tests post-déploiement ont réussi 🎉"
               else
                 echo "[ERROR - 14] ❌ Le testComplet.js a échoué !" >&2
+                echo "[DEBUG] 📄 Derniers logs du conteneur :"
+                docker logs "\$CONTAINER_BACKEND_NAME" | tail -n 40
                 exit 1
               fi
-      
+
             else
               echo "[ERROR - 14] ❌ Conteneur non trouvé : \$CONTAINER_BACKEND_NAME"
               exit 1
             fi
+
             echo "✅ Déploiement terminé avec succès !"
           EOF
 
