--- a/package.json
+++ b/package.json
@@ -8,12 +8,6 @@
     "@emotion/styled": "^11.13.5",
     "@mui/icons-material": "^6.1.8",
     "@mui/material": "^6.1.9",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/node": "^16.18.119",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
     "cookie": "^1.0.2",
     "helmet": "^8.0.0",
     "react": "^18.3.1",
@@ -23,6 +17,26 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
     "zod": "^3.24.3"
+  },
+  "devDependencies": {
+    "@types/node": "^16.18.119",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/jest": "^29.5.14",
+    "@types/dotenv": "^6.1.1",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3",
+    "prettier": "^3.4.1",
+    "stylelint": "^16.10.0",
+    "stylelint-config-standard": "^36.0.1",
+    "stylelint-order": "^6.0.4",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.2",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -48,16 +62,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@types/dotenv": "^6.1.1",
-    "@types/jest": "^29.5.14",
-    "@types/react-router-dom": "^5.3.3",
-    "prettier": "^3.4.1",
-    "stylelint": "^16.10.0",
-    "stylelint-config-standard": "^36.0.1",
-    "stylelint-order": "^6.0.4",
-    "typescript": "^5.8.3"
   }
 }
