--- a/package.json
+++ b/package.json
@@ -23,17 +23,17 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@types/react-router-dom": "^5.3.3",
-    "@types/jest": "^29.5.14",
+    "@types/jest": "^28.1.8",
     "@types/dotenv": "^6.1.1",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "ts-node": "^10.9.2",
-    "typescript": "^5.8.3",
+    "typescript": "4.9.5",
     "prettier": "^3.4.1",
     "stylelint": "^16.10.0",
     "stylelint-config-standard": "^36.0.1",
     "stylelint-order": "^6.0.4",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.1.2",
+    "jest": "^28.1.3",
+    "ts-jest": "^28.0.8",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0"
