--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,6 @@
       "@/*": ["*"], 
     }
   },
-  "include": ["src", "tsconfig.jest.json"],
+  "include": ["src", "tsconfig.jest.json", "jest.config.ts"],
   "exclude": ["node_modules", "dist", "build"] // Exclusion des dossiers inutiles pour TypeScript
 }
