--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/react-dom": "^18.3.1",
     "@types/react-router-dom": "^5.3.3",
     "jest": "^28.1.3",
+    "jest-environment-jsdom": "^28.1.3",
     "jsdom": "^26.1.0",
     "prettier": "^3.4.1",
     "stylelint": "^16.10.0",
