--- a/.env.test
+++ b/.env.test
@@ -1,2 +1,6 @@
-REACT_APP_MAINTENANCE_MODE=true
+# 📁 frontend/.env.test
+REACT_APP_API_URL=http://localhost:7001/api
+REACT_APP_FRONTEND_URL=http://localhost:3000
+REACT_APP_WEBSITE_NAME=TestApp
 REACT_APP_MAINTENANCE_MODE=false
+REACT_APP_ENABLE_DEBUG=false
