--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/react-router-dom": "^5.3.3",
     "cross-env": "^7.0.3",
     "dotenv-cli": "^8.0.0",
+    "flat-cache": "^2.0.1",
     "jest": "^28.1.3",
     "jest-environment-jsdom": "^28.1.3",
     "jsdom": "^26.1.0",
