--- a/package.json
+++ b/package.json
@@ -3,53 +3,37 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/cache": "^11.14.0",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.11",
     "@mui/material": "^6.4.11",
-    "cookie": "^1.0.2",
-    "helmet": "^8.0.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router": "^7.0.2",
-    "react-router-dom": "^7.0.2",
-    "react-scripts": "5.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.2",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4",
-    "zod": "^3.24.3",
     "zustand": "^5.0.4"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/dotenv": "^6.1.1",
-    "@types/jest": "^28.1.8",
-    "@types/node": "^16.18.119",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "@types/react-router-dom": "^5.3.3",
-    "cross-env": "^7.0.3",
-    "dotenv-cli": "^8.0.0",
-    "flat-cache": "^2.0.1",
-    "jest": "^28.1.3",
-    "jest-environment-jsdom": "^28.1.3",
-    "jsdom": "^26.1.0",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/react": "^18.2.8",
+    "@types/react-dom": "^18.2.4",
     "prettier": "^3.5.3",
     "stylelint": "^16.19.1",
     "stylelint-config-standard": "^36.0.1",
     "stylelint-order": "^6.0.4",
-    "ts-jest": "^28.0.8",
-    "ts-node": "^10.9.2",
-    "typescript": "4.9.5"
+    "typescript": "^4.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "test": "cross-env NODE_ENV=test dotenv -e .env.test -- jest --config jest.config.js",
-    "lint:css": "stylelint \"src/**/*.css\"",
     "format": "prettier --write ."
   },
   "eslintConfig": {
